...
    return () => {
      clearTimeout(timer);
    };
  };

  return (
    <View testID={"welcome_screen"}>
      <Header headerText={globalStrings.dogsApp} />
      <ImageBackground style={[styles.bulldog, opacity]} source={bullDog}>
        <View style={styles.optionButtonView}>
          <Image style={styles.logo} source={derekWebDevLogo} />
          <Text style={styles.credits}>{globalStrings.presentedBy}</Text>
          <Text style={styles.optionButtonText}>{globalStrings.allThings}</Text>
          <View style={styles.buttonContainer}>
            <Button
              testID={"skip_login"}
              buttonText={globalStrings.skipLogin}
              onPress={loginAction}
            />
          </View>
        </View>
      </ImageBackground>
...
