...
    return () => {
      clearTimeout(timer);
    };
  };

  return (
    <View style={styles.container} testID={"dashboard_screen"}>
      <StatusBar hidden />
      <Header headerText={globalStrings.dashBoard} />
      <ImageBackground
        style={styles.manWithDog}
        source={manWithDog}
        blurRadius={blur}
...
            onChangeText={onChange}
          />
          <Button onPress={buttonAction} buttonText={buttonLabel} />
        </View>
        <View style={styles.goBack}>
          <Button
            testID={"logout_button"}
            onPress={goBack}
            invertColors
            buttonText={globalStrings.goBack}
          />
        </View>
        <View style={styles.imageContainer}>
...
