...
    const result = await launchImageLibrary(options as any);
    console.log(result);
    return result;
  };

  return (
    <View style={styles.container} testID={"upload_screen"}>
      <Header headerText={globalStrings.upLoad} />
      <ImageBackground source={cuteDog} style={styles.cutePuppy}>
        <View style={styles.textContainer}>
          <Text style={styles.header}>{globalStrings.uploadTitle}</Text>
        </View>
        <View style={styles.buttonContainer}>
...
